Fixed Clear button and overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow-x: hidden;
 }
 
 .nav {
